--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>edu.eci</groupId>
 	<artifactId>TaskPlanner</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>TaskPlanner</name>
+	<name>TaskPlannerAPI</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
