--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 server.port=8081
+
+spring.data.mongodb.uri=mongodb+srv://TaskPlannerUser:WXkvdHgIyQfvWBtn@cluster0-mdbpa.mongodb.net/test?retryWrites=true&w=majority
